# ROS-integration-for-robotics-applications

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: navigation_params.yaml  robot_params.yaml
launch/: full_system.launch
src/navigation/: __init__.py  path_planner.py
src/ros_nodes/: __init__.py  controller_node.py  navigation_node.py  vision_node.py
src/vision/: __init__.py  object_detector.py
